--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+  <div>
+    <h3>My first website</h3>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet id quae quia repudiandae similique nisi doloribus ipsum dignissimos? Porro sunt pariatur perspiciatis repellendus itaque placeat veritatis omnis exercitationem sapiente neque?
+    </p>
+  </div>  
 </body>
 </html>
