--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body>
   <div>
-    <h3>My first website</h3>
+    <h3>My first Blog</h3>
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet id quae quia repudiandae similique nisi doloribus ipsum dignissimos? Porro sunt pariatur perspiciatis repellendus itaque placeat veritatis omnis exercitationem sapiente neque?
     </p>
-  </div>  
+  </div>
+  <div>
+    <h3>My Second Blog</h3>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet id quae quia repudiandae similique nisi doloribus ipsum dignissimos? Porro sunt pariatur perspiciatis repellendus itaque placeat veritatis omnis exercitationem sapiente neque?
+    </p>
+  </div>
+  <div>
+    <h3>My Third Blog</h3>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet id quae quia repudiandae similique nisi doloribus ipsum dignissimos? Porro sunt pariatur perspiciatis repellendus itaque placeat veritatis omnis exercitationem sapiente neque?
+    </p>
+  </div>
 </body>
 </html>
