--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet id quae quia repudiandae similique nisi doloribus ipsum dignissimos? Porro sunt pariatur perspiciatis repellendus itaque placeat veritatis omnis exercitationem sapiente neque?
     </p>
   </div>
+  <div>
+   <h3>How to push incremental code</h3> 
+   <ul>
+    <li>git add .</li>
+    <li>git commit -m "add a meaningful commit message</li>
+    <li>git push</li>
+   </ul>
+  </div>
 </body>
 </html>
